<resources>
    <string name="application_name">Firefox Private Network Debug</string>
    <string name="application_description">A fast, secure and easy to use VPN (Virtual Private Network).</string>
    <string name="connection_page_title">Connection</string>
    <string name="devices_page_title">My devices</string>
    <string name="devices_page_subtitle">%1$d of %2$d</string>
    <string name="settings_page_title">Settings</string>
    <string name="get_help_page_title">Get Help</string>
    <string name="about_page_title">About</string>
    <string name="feedback_page_title">Give feedback</string>
    <string name="language_page_title">Language</string>
    <string name="terms_service_url_title">Terms of Service</string>
    <string name="privacy_policy_url_title">Privacy Policy</string>
    <string name="contact_url_title">Contact us</string>
    <string name="help_support_url_title">Help &amp; Support</string>
    <string name="subscribe_url_title">Subscribe now</string>
    <string name="hero_text_vpn_off">VPN is off</string>
    <string name="hero_text_vpn_on">VPN is on</string>
    <string name="hero_text_connecting">Connecting&#8230;</string>
    <string name="hero_text_disconnecting">Disconnecting&#8230;</string>
    <string name="hero_text_switching">Switching&#8230;</string>
    <string name="hero_subtext_unstable">Unstable</string>
    <string name="hero_subtext_no_signal">No signal</string>
    <string name="hero_subtext_turn_on">Turn it on to protect your entire device</string>
    <string name="hero_subtext_secure_protected">Secure and protected</string>
    <string name="hero_subtext_check_connection">Check connection</string>
    <string name="hero_subtext_protected_shortly">You will be protected shortly</string>
    <string name="hero_subtext_disconnected_shortly">You will be disconnected shortly</string>
    <string name="hero_subtext_server_switch">From %1$s to %2$s</string>
    <string name="hero_subtext_server_switch_from">From</string>
    <string name="hero_subtext_server_switch_to">to</string>
    <string name="avatar_menu_settings">@string/settings_page_title</string>
    <string name="avatar_menu_manage_account">Manage account</string>
    <string name="avatar_menu_view_log">View log</string>
    <string name="avatar_menu_feedback">Give feedback</string>
    <string name="avatar_menu_debug">Debug</string>
    <string name="avatar_menu_sign_out">Sign out</string>
    <string name="tray_connected">Connected</string>
    <string name="tray_disconnected">Disconnected</string>
    <string name="tray_unstable">@string/hero_subtext_unstable</string>
    <string name="tray_no_signal">@string/hero_subtext_no_signal</string>
    <string name="settings_auto_launch">Launch VPN app on computer startup</string>
    <string name="settings_unsecured_network_title">Unsecured network alert</string>
    <string name="settings_unsecured_network_content">Get notified if you connect to an unsecured Wi-Fi network</string>
    <string name="settings_local_device_access_title">Allow access to your local network</string>
    <string name="settings_local_device_access_content">Access printers, streaming sticks and all other devices on your local network</string>
    <string name="settings_local_device_access_checked_disabled_message">VPN must be off before disabling</string>
    <string name="settings_local_device_access_unchecked_disabled_message">VPN must be off before enabling</string>
    <string name="about_version_title">Release version</string>
    <string name="language_default_title">Default</string>
    <string name="language_additional_title">Additional</string>
    <string name="connection_connecting">@string/hero_text_connecting</string>
    <string name="connection_disconnecting">@string/hero_text_disconnecting</string>
    <string name="connection_switching">@string/hero_text_switching</string>
    <string name="devices_current_device">Current device</string>
    <plurals name="devices_add_date_days">
        <item quantity="zero">Added today</item>
        <item quantity="one">Added yesterday</item>
        <item quantity="other">Added %d days ago</item>
    </plurals>
    <plurals name="devices_add_date_months">
        <item quantity="one">Added %d month ago</item>
        <item quantity="other">Added %d days ago</item>
    </plurals>
    <plurals name="devices_add_date_years">
        <item quantity="one">Added %d year ago</item>
        <item quantity="other">Added %d years ago</item>
    </plurals>
    <string name="devices_of">of</string>
    <string name="devices_page_description">Devices with %1$s installed using your account. Connect up to %2$d devices.</string>
    <string name="devices_limit_reached_title">Remove a device</string>
    <string name="devices_limit_reached_content">You\'ve reached your limit. To install the VPN on this device, you\'ll need to remove one.</string>
    <string name="devices_remove_popup_title">Remove device?</string>
    <string name="devices_remove_popup_content">Please confirm you would like to remove %1$s.</string>
    <string name="popup_cancel_button_text">Cancel</string>
    <string name="popup_remove_button_text">Remove</string>
    <string name="popup_ok_button_text">Ok</string>
    <string name="beta_announcement_title">Hang tight for initial VPN connection</string>
    <string name="beta_announcement_content_1">It may take a few minutes to connect you to our global network of %1$d+ servers.  Future connections will be much faster.</string>
    <string name="beta_announcement_content_2">If you\'re still not connected after 5 minutes, disconnect and try again.</string>
    <string name="beta_announcement_ok_button_text">Okay, got it</string>
    <string name="link_account_title">@string/application_name</string>
    <string name="link_account_content">@string/application_description</string>
    <string name="link_account_signin_button_text">Get started</string>
    <string name="link_account_not_subscriber_text">Not a subscriber?</string>
    <string name="verify_account_title">Waiting for sign in and subscription confirmation&#8230;</string>
    <string name="verify_account_something_wrong">Something wrong?</string>
    <string name="verify_account_try_again">Cancel and try again</string>
    <string name="update_title">Security Patch</string>
    <string name="update_content_1">You must update your software to continue using %1$s</string>
    <string name="update_content_2">Your connection will not be secure while you update.</string>
    <string name="update_update_button_text">Update now</string>
    <string name="update_update_failed">Update failed</string>
    <string name="update_update_started">Update started</string>
    <string name="nux_title_1">No activity logs</string>
    <string name="nux_content_1">We\'re Mozilla. We don\'t log your activity and we\'re always on your side.</string>
    <string name="nux_title_2">Device level encryption</string>
    <string name="nux_content_2">No one will see your location or activity, even on unsecure Wi-Fi networks.</string>
    <string name="nux_title_3">Servers in 39 countries</string>
    <string name="nux_content_3">Stand up to tech bullies and protect your access to the web.</string>
    <string name="nux_title_4">Connect up to 5 devices</string>
    <string name="nux_content_4">Stream, download and game. We won\'t restrict your bandwidth.</string>
    <string name="nux_title_5">Quick access</string>
    <string name="nux_content_5_1">You can quickly access %1$s from your taskbar tray</string>
    <string name="nux_content_5_2">Located next to the clock at the bottom right of your screen</string>
    <string name="nux_learn_more">Learn more</string>
    <string name="nux_skip">Skip</string>
    <string name="nux_continue">Continue</string>
    <string name="feedback_upset">I\'m upset</string>
    <string name="feedback_confused">I\'m confused</string>
    <string name="feedback_happy">I\'m happy</string>
    <string name="feedback_note_placeholder">Write a note&#8230;</string>
    <string name="feedback_submit_button_text">Submit feedback</string>
    <string name="windows_notification_error_title">%1$s ran into an error</string>
    <string name="windows_notification_notice_title">Notice</string>
    <string name="windows_notification_warning_title">Warning</string>
    <string name="windows_notification_vpn_on_title">@string/hero_text_vpn_on</string>
    <string name="windows_notification_vpn_on_content">You\'re secure and protected.</string>
    <string name="windows_notification_vpn_off_title">@string/hero_text_vpn_off</string>
    <string name="windows_notification_vpn_off_content">You disconnected.</string>
    <string name="windows_notification_vpn_switch_title">From %1$s to %2$s</string>
    <string name="windows_notification_vpn_switch_content">You switched servers.</string>
    <string name="windows_notification_vpn_turn_on_title">Turn on VPN?</string>
    <string name="windows_notification_vpn_turn_on_content">Connect to your last location: %1$s.</string>
    <string name="toast_debug_export_error">We ran into an error while exporting your debug information.</string>
    <string name="toast_add_device_error">Could not add new device</string>
    <string name="toast_remove_device_error">Could not remove device</string>
    <string name="toast_remove_current_device_error">Could not remove device - it is currently in use</string>
    <string name="toast_remove_device_success">Successfully removed device</string>
    <string name="toast_login_url_retrieval_error">Could not retrieve login URLs</string>
    <string name="toast_user_acess_control_error">You need to allow %1$s to continue by clicking \"Yes\"</string>
    <string name="toast_vpn_launch_error">We couldn\'t launch your VPN right now, try again in a few moments</string>
    <string name="toast_vpn_start_error">Couldn\'t start VPN</string>
    <string name="toast_driver_missing_error">Driver is missing, connection failed</string>
    <string name="toast_firewall_rules_error">Error creating firewall rules</string>
    <string name="toast_load_configuration_error">Error loading configuration file for VPN</string>
    <string name="toast_open_log_file_error">Can\'t open log file for writing</string>
    <string name="toast_update_version_message_1">New features are available!</string>
    <string name="toast_update_version_message_2">@string/update_update_button_text</string>
    <string name="toast_no_subscription">No active subscription.</string>
    <string name="toast_unable_to_connect">Unable to connect.</string>
    <string name="toast_try_again">Try again</string>
    <string name="toast_feedback_submitted">Feedback submitted!</string>
    <string name="toast_feedback_undo">Undo</string>
    <string name="wifi_unsecure_network_detected_msg">Unsecured Wi-Fi network detected</string>
    <string name="wifi_you_should_turn_on_msg">Turn on VPN to secure your device.</string>
    <string name="wifi_network_unsecure_msg">\"%1$s\" is not secure.</string>
    <string name="viewlog_save_button">Save</string>
    <string name="viewlog_timestamp_header">Timestamp</string>
    <string name="viewlog_message_header">Message</string>
    <string name="viewlog_copy_menuitem">Copy</string>
    <string name="viewlog_select_all_menuitem">Select all</string>
    <string name="viewlog_save_to_file_menuitem">Save to file</string>
    <string name="viewlog_save_dialog_title">Save log</string>
    <string name="viewlog_save_dialog_filter">Text Log Files</string>
    <string name="viewlog_window_title">Log</string>
    <string name="viewlog_save_error">There was a problem saving the log file</string>
    <string name="label_vpn">VPN</string>
    <string name="entrance_description">A fast, secure and easy to use VPN\n(Virtual Private Network).</string>
    <string name="onboarding_logged_out">Logged out and device removed.</string>
    <string name="launcher_name">Firefox VPN</string>
</resources>