<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray5"
    android:elevation="10dp"
    android:clickable="true"
    android:focusable="true">

    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_fpn"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/app_name" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:text="@string/application_name"
        android:textColor="@android:color/black"
        android:textAppearance="@style/TextAppearance.Guardian.Header20"
        app:layout_constraintTop_toTopOf="@id/app_icon"
        app:layout_constraintBottom_toBottomOf="@id/app_icon"
        app:layout_constraintStart_toEndOf="@id/app_icon"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="26dp"
        android:src="@drawable/ic_download"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_name"
        app:layout_constraintBottom_toTopOf="@+id/title" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.Guardian.Title10"
        android:textColor="@color/gray50"
        android:text="@string/update_title"
        android:layout_marginTop="26dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        app:layout_constraintTop_toBottomOf="@id/image"
        app:layout_constraintBottom_toTopOf="@id/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.Guardian.Body10"
        android:textColor="@color/gray40"
        android:text="@string/update_content_1"
        android:layout_marginTop="8dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintBottom_toTopOf="@+id/info_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/info_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_snackbar"
        android:backgroundTint="@android:color/white"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:elevation="2dp"
        app:layout_constraintTop_toBottomOf="@id/description"
        app:layout_constraintBottom_toTopOf="@id/update_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/info_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_information"
            android:tint="@color/gray50"
            android:elevation="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:id="@+id/info_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/gray50"
                android:textAppearance="@style/TextAppearance.Guardian.Byline10"
                android:text="@string/update_content_2"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/info_icon"
                app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/update_btn"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="34dp"
        android:background="@drawable/selector_bg_primary_button"
        android:gravity="center"
        android:text="@string/update_update_button_text"
        android:textColor="@android:color/white"
        android:textAppearance="@style/TextAppearance.Guardian.Header20"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/manage_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/manage_btn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:gravity="center"
        android:text="@string/avatar_menu_manage_account"
        android:textColor="@color/blue50"
        android:textAppearance="@style/TextAppearance.Guardian.Body10"
        android:background="@drawable/ripple_rect_radius_4dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        app:layout_constraintBottom_toTopOf="@+id/sign_out_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/sign_out_btn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginBottom="32dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:gravity="center"
        android:background="@drawable/ripple_rect_radius_4dp"
        android:text="@string/avatar_menu_sign_out"
        android:textColor="@color/red50"
        android:textAppearance="@style/TextAppearance.Guardian.Header20"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
