<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:title="@string/get_help_page_title"
        app:titleTextColor="@color/gray50"
        app:titleTextAppearance="@style/TextAppearance.Guardian.Header20"
        app:navigationIcon="@drawable/ic_back" />

    <LinearLayout
        android:id="@+id/btn_contact_us"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/contact_url_title"
            android:textColor="@color/gray50"
            android:textAppearance="@style/TextAppearance.Guardian.Header20" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_external_link" />

    </LinearLayout>

    <ImageView
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/gray10"
        app:layout_constraintTop_toBottomOf="@id/btn_contact_us"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/btn_help_and_support"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/help_support_url_title"
            android:textColor="@color/gray50"
            android:textAppearance="@style/TextAppearance.Guardian.Header20" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_external_link" />

    </LinearLayout>

    <ImageView
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/gray10"
        app:layout_constraintTop_toBottomOf="@id/btn_help_and_support"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/btn_debug"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/divider2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/avatar_menu_debug"
            android:textColor="@color/gray50"
            android:textAppearance="@style/TextAppearance.Guardian.Header20" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_external_link" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>